force-app/main/default/objects/CLQ_CAP_Documents__c/CLQ_CAP_Documents__c.object-meta.xml
<CustomObject>
    <description>Junction Object between CAP and Documents.</description>
    <label>CAP Document</label>
    <nameField>
        <label>CAP Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAP Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>