force-app/main/default/objects/CLQ_CAP_Documents__c/fields/CLQ_All_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_All_Comments__c</fullName>
    <label>All Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>