force-app/main/default/objects/CLQ_CAP_Documents__c/fields/CLQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CAP Documents</relationshipLabel>
    <relationshipName>CAP_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>