force-app/main/default/objects/CLQ_CAP_Documents__c/fields/CLQ_Corrective_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Corrective_Action_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corrective Action Plan</label>
    <referenceTo>CLQ_Corrective_Action_Plan__c</referenceTo>
    <relationshipLabel>CAP Documents</relationshipLabel>
    <relationshipName>CAP_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>