force-app/main/default/objects/CLQ_CAP_Documents__c/fields/CLQ_Integration_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Document_Link__c</fullName>
    <description>Field to display document contents from ONBASE Server</description>
    <formula>HYPERLINK( &quot;javascript: void(window.open(&apos;&quot;+Id +&quot;&apos;,&apos;Documents&apos;,&apos;menubar=0,resizable=1,directories=0,titlebar=0,toolbar=0,location=0,status=0,scrollbars=1,fullscreen=0,top=0,left=0&apos;)) ;&quot; , IMAGE(&quot;/img/icon/documents16.png&quot;,&quot;View Document&quot;)&amp;&quot;&quot;&amp;&quot;View Document&quot;,&quot;_self&quot;)</formula>
    <label>Document Link</label>
    <type>Text</type>
</CustomField>