force-app/main/default/objects/CLQ_CAP_Documents__c/fields/CLQ_Integration_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Document_Type__c</fullName>
    <description>Created to access global picklist in upload files vf</description>
    <label>Integration Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_OnBase_Document_Types</valueSetName>
    </valueSet>
</CustomField>