force-app/main/default/objects/CLQ_CAP_Documents__c/fields/CLQ_Standard_Document__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Standard_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Document</label>
    <referenceTo>CLQ_Standard_Document__c</referenceTo>
    <relationshipLabel>CAP Documents</relationshipLabel>
    <relationshipName>CAP_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>