force-app/main/default/objects/CLQ_CAP_Documents__c/fields/CLQ_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Submission_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>