force-app/main/default/objects/CLQ_CAP_Documents__c/fields/Document_Points__c.field-meta.xml
<CustomField>
    <fullName>Document_Points__c</fullName>
    <label>Document Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>