force-app/main/default/objects/CLQ_CAP_Documents__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Returned for Revision</fullName>
            </value>
            <value>
                <fullName>Status Pending</fullName>
            </value>
            <value>
                <fullName>Re-Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>