force-app/main/default/objects/CLQ_CAP_Documents__c/fields/Program_Documents__c.field-meta.xml
<CustomField>
    <fullName>Program_Documents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipLabel>CAP Documents</relationshipLabel>
    <relationshipName>CAP_Documents_PrgDocument</relationshipName>
    <type>Lookup</type>
</CustomField>